[package]
name = "code-sort"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/code-sort"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.65"

[features]
default = []
explain = []

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.2.0"
lazy-regex = "3"
termimad = "0.29"
thiserror = "1.0.50"

