[package]
name = "codesort"
version = "0.1.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/codesort"
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.65"
keywords = ["code", "sort"]
description = "codesort sorts code"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = []
explain = []

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.2.0"
lazy-regex = "3"
termimad = "0.29"
thiserror = "1.0.50"

