[package]
name = "codesort"
version = "1.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/codesort"
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.65"
keywords = ["code", "sort"]
description = "codesort sorts code"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = []
explain = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-help = "1.3"
include_dir = "0.7"
lazy-regex = "3.4"
termimad = "0.31"
thiserror = "1.0"

